app_zrpp_drbjl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-drbjl-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: drbjl.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-drbjl
          servicePort: 9991
